--- a/flashlight/res/layout/main.xml
+++ b/flashlight/res/layout/main.xml
@@ -4,6 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <CheckBox
+        android:id="@+id/checkBox1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checked="true"
+        android:text="@string/keep_open" />
+
     <ToggleButton
         android:id="@+id/toggleButton1"
         android:layout_width="match_parent"
